--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ dependencies = [
     "openai>=1.61.1",
     "pandas>=2.2.3",
     "python-dateutil>=2.9.0.post0",
+    "python-dotenv>=1.0.0",
     "streamlit>=1.42.0",
+    "plotly>=5.17.0",
 ]
